# mpc-iris-code

./: .gitignore  Cargo.toml  Readme.md  Specification.md  rustfmt.toml  specification.ipynb
notes/: Ring-to-Field.ipynb  Shamir.ipynb  adder.ipynb  dot-products.ipynb
spec/: Specification.md  dot-product.md  implementation.md  matching-modes.md  requirements.md  roadmap.md  sign-extraction.md
src/: bench.rs  bits.rs  dotprod.rs  encoded_bits.rs  json_stream.rs  lib.rs  main.rs  preprocess.rs  secret_bits.rs  template.rs
src/arch/: generic.rs  mod.rs  neon.rs  reference.rs  sve.rs  sve2.rs
