[package]
name = "mpc-iris-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bench"]
bench = ["dep:criterion"]

[dependencies]
criterion = { version = "0.5.1", optional = true }
itertools = "0.12.0"
ndarray = { version = "0.15.6", features = ["rayon", "blas", "matrixmultiply-threading"] }
rand = "0.8.5"
wgpu = "0.19.1"

[[bench]]
name = "bench"
harness = false
path = "src/bench.rs"
required-features = ["bench"]
