[package]
name = "mpc-iris-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bench = ["dep:criterion"]

[dependencies]
anyhow = "1.0.79"
bytemuck = { version = "1.14.0", features = ["derive"] }
clap = { version = "4.4.18", features = ["derive", "unicode", "wrap_help"] }
clap-num = "1.1.1"
criterion = { version = "0.5.1", optional = true }
futures = "0.3.30"
hex = { version = "0.4.3", features = ["serde"] }
indicatif = { version = "0.17.7", features = ["rayon"] }
itertools = "0.12.0"
memmap = "0.7.0"
rand = "0.8.5"
rayon = "1.8.1"
serde = { version = "1.0.195", features = ["serde_derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"

# cargo bench --bench bench --features bench
[[bench]]
name = "bench"
harness = false
path = "src/bench.rs"
required-features = ["bench"]

[profile.release]
opt-level = 3
lto = "fat"

# samply record --rate 10000 -- cargo bench --profile profiling --bench bench --features bench -- --profile-time 60 distance4
# samply record -- cargo run  --profile profiling -- participant ./mpc.share-0
[profile.profiling]
inherits = "release"
debug = true

# Compilation profile for any non-workspace member.
# We want tfhe and other deps to always be build optimized, otherwise tests will run very slow.
[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
float_eq = "1.0.1"
proptest = "1.4.0"
